[package]
name = "cloudflare"
version = "0.1.0"
edition = "2021"

[features]
default = []
d1 = []

[dependencies]
serde = {version = "1", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false }

url = { version = "2.5", default-features = false }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }


[dev-dependencies]
tokio = "1"

httpmock = "0.7"
once_cell = "1.20"
tracing = "0.1"
tracing-subscriber = "0.3"
